--- a/Implementation of SVD in Python from scratch.ipynb
+++ b/Implementation of SVD in Python from scratch.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "323ff415",
+   "execution_count": 35,
+   "id": "6e14741e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ebfc94",
+   "id": "fe9f3c84",
    "metadata": {},
    "source": [
     "The line import numpy as np imports the numpy library and assigns it the alias np. This allows you to use various numerical and array operations provided by NumPy.\n",
@@ -23,25 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "8cfaeb44",
+   "execution_count": 36,
+   "id": "01cf8fa1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#This function calculates the Eigenvectors corresponding for U matrice\n",
     "def calculU(M): \n",
-    "    newM = np.dot(M, M.T) \n",
+    "    B = np.dot(M, M.T) \n",
     "        \n",
-    "    eigenvalues, eigenvectors = np.linalg.eig(newM) \n",
+    "    eigenvalues, eigenvectors = np.linalg.eig(B) \n",
     "    ncols = np.argsort(eigenvalues)[::-1] \n",
     "    \n",
-    "    return eigenvectors[:,\n",
-    "                       ] "
+    "    return eigenvectors[:,ncols] "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "58246d57",
+   "id": "e26fdda5",
    "metadata": {},
    "source": [
     "This function takes a matrix M as input. It first computes newM by performing the dot product between M and its transpose using np.dot(M, M.T).\n",
@@ -55,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e5e305a8",
+   "execution_count": 37,
+   "id": "be6b1748",
    "metadata": {},
    "outputs": [],
    "source": [
     "#This function calculates the Eigenvectors corresponding for V matrice\n",
     "def calculVt(M): \n",
-    "    newM = np.dot(M.T, M)\n",
+    "    B = np.dot(M.T, M)\n",
     "        \n",
-    "    eigenvalues, eigenvectors = np.linalg.eig(newM) \n",
+    "    eigenvalues, eigenvectors = np.linalg.eig(B) \n",
     "    ncols = np.argsort(eigenvalues)[::-1] \n",
     "    \n",
     "    return eigenvectors[:,ncols].T \n"
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df70a891",
+   "id": "d2754fc1",
    "metadata": {},
    "source": [
     "This function takes a matrix M as input. It begins by comparing the sizes of the matrices np.dot(M, M.T) and np.dot(M.T, M) using np.size. If the former is larger, it calculates newM as the dot product of M.T and M, otherwise as the dot product of M and M.T. This ensures that newM corresponds to the matrix used for the calculation of singular values.\n",
@@ -86,8 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b018bef4",
+   "execution_count": 38,
+   "id": "f603cf40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d2eb18",
+   "id": "c74edbcf",
    "metadata": {},
    "source": [
     "This function takes a matrix M as input. It starts by comparing the sizes of the matrices np.dot(M, M.T) and np.dot(M.T, M) using np.size. If the former is larger, it calculates newM as the dot product of M.T and M, otherwise as the dot product of M and M.T. This step determines the appropriate matrix for eigenvalue calculation.\n",
@@ -120,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "b179ae20",
+   "execution_count": 39,
+   "id": "d1752724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "53e7aaa4",
+   "execution_count": 40,
+   "id": "2c3f12b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "af4a9cbd",
+   "execution_count": 41,
+   "id": "dee863d8",
    "metadata": {},
    "outputs": [
     {
@@ -177,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "9f85acd3",
+   "execution_count": 42,
+   "id": "5da26061",
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +203,54 @@
     "A_remake = (U @ newSigma @ Vt)\n",
     "print(A_remake)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e82bd764",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ae363f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77aaa4e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ef9211",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61a51fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a7518b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
